--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "*.tsx": "typescriptreact",
     ".env.*": "dotenv",
     ".prettierrc": "json",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "random": "cpp"
   }
 }
